# bevy-gta-clonev1

./: .gitignore  .mailmap  AGENT.md  AGENTS.md  ARCHITECTURAL_FIX_ROAD_VALIDATION.md  ARCHITECTURAL_MIGRATION_COMPLETE.md  ARCHITECTURAL_REVIEW_VS_SHIFT.md  ARCHITECTURAL_SHIFT_COMPLETE.md  BLAME_ANALYSIS.md  BUGATTI_TELEMETRY_GUIDE.md  CODEOWNERS  COMMIT_CHECKLIST.md  COMMIT_READY.md  COMPLETE_DAMAGE_ASSESSMENT.md  CONTRIBUTING.md  CORRECTED_BLAME_ANALYSIS.md  CRITICAL_FIXES_TO_CHERRY_PICK.md  Cargo.toml  ENTITY_LIMITS_VERIFICATION.md  ERROR_MATRIX.md  ERROR_MESSAGE_IMPROVEMENTS.md  ERROR_SUMMARY.md  EVENT_WIRING_VERIFICATION.md  F16_CONTROLS.md  FACTORY_ARCHITECTURE_AUDIT.md  FACTORY_REFACTOR_COMPLETE.md  FINAL_DIFF_AUDIT.md  FINAL_FIXES.md  FIXED_ROADNETWORK.md  FIXES_COMPLETE.md  GOLDEN_FRAME_IMPLEMENTATION_SUMMARY.md  GPU_CULLING_IMPLEMENTATION.md  HARDCODED_TO_DATA_DRIVEN_SUMMARY.md  HELICOPTER_ARCADE_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  OBSERVER_PATTERN_CONVERSION.md  OPTIMIZATION_SUMMARY.md  ORACLE_FIXES_COMPLETE.md  ORACLE_PHASE3_SAVE_LOAD_IMPLEMENTATION_COMPLETE.md  P0_ORACLE_FIXES_COMPLETE.md  (+69 more)
crates/amp_core/: Cargo.toml
crates/amp_core/src/: lib.rs
crates/amp_gpu/: Cargo.toml
crates/amp_gpu/src/: context.rs  error.rs  lib.rs  shader.rs  surface.rs
crates/amp_math/: Cargo.toml
crates/amp_math/src/: bounds.rs  lib.rs  morton.rs  transforms.rs
crates/amp_spatial/: Cargo.toml
crates/amp_spatial/src/: clipmap.rs  lib.rs  provider.rs  region.rs
crates/amp_world/: Cargo.toml
crates/amp_world/src/: lib.rs
crates/config_core/: Cargo.toml
crates/config_core/src/: lib.rs
crates/gameplay_factory/: Cargo.toml  README.md
crates/gameplay_factory/src/: component_registry.rs  hot_reload.rs  lib.rs  lib.rs.bak  prefab.rs  ron_loader.rs
crates/gameplay_factory/tests/: hot_reload_integration.rs  integration_test.rs
examples/: Cargo.toml  gameplay_factory_example.rs  instrumented_system.rs  minimal.rs  physics_utils_integration.rs  vegetation_instancing_demo.rs  vehicle_control_example.rs
examples/legacy/: README.md  input_config.rs  input_manager.rs  vegetation_instancing_demo.rs  vehicle_control_config.rs  vehicle_control_example.rs
game_bin/: Cargo.toml  OWNERS
game_bin/assets/config/: audio_settings.ron  camera_settings.ron  vehicle_physics.ron  visual_effects.ron
game_bin/src/: game_state.rs  lib.rs  main.rs  setup.rs
game_bin/src/components/: dirty_flags.rs  player.rs  vehicles.rs  world.rs
game_bin/src/config/: performance_config.rs
game_bin/src/factories/: entity_factory_unified.rs  generic_bundle.rs
game_bin/src/plugins/: batching_plugin.rs  game_plugin.rs  mod.rs
game_bin/src/services/: mod.rs
game_bin/src/setup/: vehicles.rs
game_bin/src/systems/: audio.rs  batch_processing.rs  batching.rs  config_loader.rs  debug.rs  distance_cache_debug.rs  entity_creation_system.rs  interaction.rs  mod.rs  performance_integration.rs  physics_utils.rs  spawn_validation.rs  vegetation_instancing_integration.rs  water.rs
game_core/: Cargo.toml  OWNERS
game_core/src/: bundles.rs  compat.rs  lib.rs  prelude.rs  schedule.rs  spatial.rs  world.rs
game_core/src/components/: dirty_flags.rs  instanced_vegetation.rs  lod.rs  mod.rs  placeholders.rs  player.rs  spatial.rs  vehicles.rs  world.rs
game_core/src/config/: game_config.rs  vehicle_config.rs
game_core/src/persistence/: load_system.rs  mod.rs  save_system.rs
game_core/src/services/: mod.rs  simple_services.rs
gameplay_render/: Cargo.toml  OWNERS
gameplay_render/src/: batch_processing.rs  batching.rs  batching_test.rs  lib.rs  prelude.rs
gameplay_render/src/factories/: entity_builder_unified.rs  entity_factory_unified.rs  generic_bundle.rs  mesh_factory.rs  mod.rs  rendering_factory.rs  transform_factory.rs
gameplay_render/src/plugins/: batching_plugin.rs  mod.rs
gameplay_render/src/systems/: camera.rs  distance_cache_debug.rs  mod.rs  transform_sync.rs  vegetation_instancing_integration.rs  visibility_fix.rs
gameplay_render/src/world/: mod.rs  unified_factory_setup.rs
gameplay_render/tests/: lib.rs  simple_test.rs
gameplay_render/tests/lod_culling/: mod.rs  tests.rs
gameplay_render/tests/performance_validation/: mod.rs  tests.rs
gameplay_render/tests/property_tests/: mod.rs  tests.rs
gameplay_render/tests/rendering_pipeline/: mod.rs  tests.rs
gameplay_render/tests/utils/: mod.rs
gameplay_render/tests/visual_quality/: mod.rs  tests.rs
gameplay_sim/: COMPREHENSIVE_TEST_SUMMARY.md  Cargo.toml  OWNERS
gameplay_sim/src/: bevy16_compat.rs  compat.rs  config.rs  constants.rs  entity_creation.rs  lib.rs  macros.rs  prelude.rs  spawn_validation.rs  water.rs
gameplay_sim/src/behavior/: human_behavior.rs  interaction.rs  mod.rs
gameplay_sim/src/distance/: mod.rs  unified_distance_calculator.rs
gameplay_sim/src/factories/: entity_builder_unified.rs  entity_factory_unified.rs  generic_bundle.rs  material_factory.rs  mesh_factory.rs  mod.rs  rendering_factory.rs  transform_factory.rs
gameplay_sim/src/input/: control_manager.rs  control_manager_ext.rs  input_config.rs  input_manager.rs  mod.rs  vehicle_control_config.rs
gameplay_sim/src/lod/: mod.rs  modern_lod_system.rs
gameplay_sim/src/movement/: aircraft.rs  mod.rs  player.rs  realistic_vehicle_input.rs  realistic_vehicle_physics.rs  realistic_vehicle_physics_core.rs  supercar_effects.rs  supercar_input.rs  supercar_physics.rs  vehicles.rs
gameplay_sim/src/physics/: collision_resolution.rs  mod.rs  safeguards.rs  utilities.rs
gameplay_sim/src/plugins/: input_plugin.rs  mod.rs  persistence_plugin.rs  player_plugin.rs  unified_world_plugin.rs  vehicle_plugin.rs  water_plugin.rs
gameplay_sim/src/services/: ground_detection.rs  simple_services.rs  (+1 more)
gameplay_sim/tests/: lib.rs  mod.rs  simple_test.rs
gameplay_ui/: Cargo.toml  OWNERS
gameplay_ui/src/: lib.rs  prelude.rs  simple_service_example.rs  timing_service.rs
gameplay_ui/tests/: lib.rs  simple_ui_test.rs
test_utils/: Cargo.toml
test_utils/src/: golden_frame.rs  lib.rs  minimal_app.rs  prelude.rs  screenshot.rs  world_helpers.rs
(+909 files in other folders)
