[package]
name = "gta_game"
version = "0.1.0"
edition = "2024"

[features]
default = ["p1_1_decomp"]
debug-movement = []
debug-audio = []
debug-ui = []
debug-timing = []
debug-events = []
p1_1_decomp = []
event-audit = []
legacy-events = []
ci_headless = []
perf-tests = []

# Removed gta_simple binary - using main.rs as default

[dependencies]
bevy = { version = "0.16.1", features = ["serialize", "shader_format_glsl"] }
bevy_rapier3d = "0.30.0"
bevy_common_assets = { version = "0.13", features = ["ron"] }
bytemuck = { version = "1.18", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }
static_assertions = "1.1"
thiserror = "2.0"
rustc-hash = "1.1"
smallvec = "1.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
