[package]
name = "gta_game"
version = "0.1.0"
edition = "2024"

[lib]
# Disable doctests to prevent non-standalone snippets in rustdoc from breaking `cargo test`
doctest = false

[features]
default = []
debug-movement = []
debug-audio = []
debug-ui = []
debug-timing = []

# Removed gta_simple binary - using main.rs as default

[dependencies]
bevy = { version = "0.16.1", features = ["serialize", "shader_format_glsl"] }
bevy_rapier3d = "0.30.0"
bevy_common_assets = { version = "0.13", features = ["ron"] }
bytemuck = { version = "1.18", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-lite = "2.0"

[package.metadata.bundle]
name = "GTA Game"
identifier = "com.bradyjeong.gta_game"
version = "1.0.0"
resources = ["assets"]
category = "public.app-category.games"
