[package]
name = "gta_game"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-movement = []
debug-audio = []
debug-ui = []
debug-timing = []

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
engine_core = { path = "../engine_core" }
engine_bevy = { path = "../engine_bevy" }
game_core = { path = "../game_core" }
gameplay_sim = { path = "../gameplay_sim", features = ["legacy_api"] }
gameplay_render = { path = "../gameplay_render" }
gameplay_ui = { path = "../gameplay_ui" }
