[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-movement = []
debug-audio = []
debug-ui = []
debug-timing = []

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Internal dependencies
engine_core = { path = "../engine_core" }
engine_bevy = { path = "../engine_bevy" }
