[package]
name = "gameplay_render"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
engine_core = { path = "../engine_core" }
engine_bevy = { path = "../engine_bevy" }
game_core = { path = "../game_core" }
gameplay_sim = { path = "../gameplay_sim" }

[features]
heavy_tests = []

# Temporarily disable tests for Phase 5 green pass
[[test]]
name = "simple_test"
path = "tests/simple_test.rs"
test = false

[[test]]
name = "lib"
path = "tests/lib.rs"
test = false

[dev-dependencies]
proptest = "1.4"
csv = "1.3"
