[package]
name = "gameplay_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
fastrand = "2.0"

# Internal dependencies
engine_core = { path = "../engine_core" }
engine_bevy = { path = "../engine_bevy" }
game_core = { path = "../game_core" }

[dev-dependencies]
proptest = "1.4"
csv = "1.3"
test_utils = { path = "../test_utils" }
