[package]
name = "gameplay_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
bevy_rapier3d = { workspace = true }

# Internal dependencies
engine_core = { path = "../engine_core" }
engine_bevy = { path = "../engine_bevy" }
game_core = { path = "../game_core" }
gameplay_sim = { path = "../gameplay_sim" }
gameplay_render = { path = "../gameplay_render" }

[dev-dependencies]
# Test dependencies for comprehensive testing
criterion = "0.5"
