[package]
name = "amp_gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU abstraction layer built on wgpu for the AMP Game Engine"
categories = ["rendering", "graphics", "game-engines"]
keywords = ["gpu", "wgpu", "graphics", "rendering", "game-engine"]

[dependencies]
amp_core = { path = "../amp_core" }
wgpu.workspace = true
winit = "0.29"
pollster = "0.3"
thiserror.workspace = true
anyhow.workspace = true

[features]
default = []

[dev-dependencies]
rstest.workspace = true
