[package]
name = "amp_math"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance math library for spatial calculations and Morton encoding"
categories = ["mathematics", "game-engines", "algorithms"]
keywords = ["math", "morton", "spatial", "3d", "game-engine"]

[dependencies]
glam = { version = "0.28", features = ["mint", "serde", "fast-math"] }
bitset-fixed = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
