[package]
name = "amp_spatial"
version = "0.1.0"
edition = "2021"

[dependencies]
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
async-trait = "0.1"
glam = { version = "0.25", features = ["fast-math"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
