[package]
name = "amp_spatial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hierarchical spatial partitioning and streaming for the AMP Game Engine"
categories = ["algorithms", "data-structures", "game-engines"]
keywords = ["spatial", "partitioning", "streaming", "clipmap", "game-engine"]

[dependencies]
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
async-trait = "0.1"
glam = { version = "0.25", features = ["fast-math"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
