[package]
name = "amp_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
amp_spatial = { path = "../amp_spatial" }
bevy_ecs.workspace = true
serde.workspace = true
anyhow.workspace = true

[dev-dependencies]
rstest.workspace = true
