[package]
name = "amp_world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ECS world management and entity lifecycle for the AMP Game Engine"
categories = ["game-engines", "data-structures"]
keywords = ["ecs", "world", "entity", "game-engine", "bevy"]

[dependencies]
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
amp_spatial = { path = "../amp_spatial" }
bevy_ecs.workspace = true
serde.workspace = true
anyhow.workspace = true

[dev-dependencies]
rstest.workspace = true
