[package]
name = "gameplay_factory"
version = "0.1.0"
edition = "2021"
authors = ["AMP Team"]
description = "Unified entity factory for prefab-based gameplay systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"
categories = ["game-development", "game-engines"]
keywords = ["gamedev", "bevy", "entity", "factory", "prefab"]

[dependencies]
bevy_ecs = { version = "0.13", features = ["bevy_reflect"] }
bevy_math = "0.13"
bevy_transform = "0.13"
bevy_core = "0.13"
bevy_render = "0.13"
amp_core = { path = "../amp_core" }
config_core = { path = "../config_core" }
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.8", optional = true }
glob = "0.3"
log = "0.4"
notify = { version = "6.1", optional = true }
tokio = { version = "1.0", features = ["rt", "sync", "time", "test-util"], optional = true }
once_cell = "1.19"
dashmap = "6.0"

[dev-dependencies]
rstest = "0.21"
tempfile = "3.8"
crossbeam-utils = "0.8"
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros", "test-util"] }

[features]
default = ["ron"]
ron = ["dep:ron"]
hot-reload = ["dep:notify", "dep:tokio"]
